--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,13 +7,13 @@
     tools:context=".CadastroActivity">
 
     <EditText
-        android:id="@+id/nomeInputText"
+        android:id="@+id/nameInputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Insira seu nome"
         android:ems="10"
+        android:hint="@string/register_input_name"
         android:inputType="textPersonName"
-        android:text="@string/register_input_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -21,13 +21,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/jogarButton"
+        android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_button_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomeInputText"
+        app:layout_constraintTop_toBottomOf="@+id/nameInputText"
         app:layout_constraintVertical_bias="0.50" />
 </androidx.constraintlayout.widget.ConstraintLayout>
