--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink_200">#FFFF77A5</color>
+    <color name="pink_500">#FFE91E63</color>
+    <color name="red">#FFE80000</color>
+    <color name="gray_200">#9C9C9C</color>
+
 </resources>
